style:main.js code formatting style:replace favicon

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     <span>Steven Lee</span>
                 </li>
                 <li>
-                    <strong>Birth Date:</strong>
+                    <strong>Birthday:</strong>
                     <span>November 22, 1994</span>
                 </li>
                 <li>
@@ -999,8 +999,7 @@
 
             <p>
                 Xi'an, Shaanxi<br>
-                China🇨🇳<br>
-                94043 US
+                🇨🇳 China
             </p>
 
         </div>
