style: remove auto complete style:replace logo

--- a/index.html
+++ b/index.html
@@ -947,18 +947,19 @@
 
                     <div class="form-field">
                         <input name="contactName" type="text" id="contactName" placeholder="Name" value="" minlength="2"
-                               required="">
+                               required="" autocomplete="off">
                     </div>
                     <div class="form-field">
                         <input name="contactEmail" type="email" id="contactEmail" placeholder="Email" value=""
-                               required="">
+                               required="" autocomplete="off">
                     </div>
                     <div class="form-field">
-                        <input name="contactSubject" type="text" id="contactSubject" placeholder="Subject" value="">
+                        <input name="contactSubject" type="text" id="contactSubject" placeholder="Subject" value=""
+                               autocomplete="off">
                     </div>
                     <div class="form-field">
                         <textarea name="contactMessage" id="contactMessage" placeholder="message" rows="10" cols="50"
-                                  required=""></textarea>
+                                  required="" autocomplete="off"></textarea>
                     </div>
                     <div class="form-field">
                         <button class="submitform">Submit</button>
