docs:add self description; style:change link icon

--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
 
     <ul class="intro-social">
         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-        <li><a href="#"><i class="fa fa-behance"></i></a></li>
+        <li><a href="#"><i class="fa fa-github"></i></a></li>
         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+        <li><a href="#"><i class="fa fa-stack-overflow"></i></a></li>
     </ul> <!-- /intro-social -->
 
 </section> <!-- /intro -->
@@ -117,9 +117,13 @@
 
                 <img src="images/avatar.webp" alt="Steven's avatar">
 
-                <p class="lead">Lorem ipsum Exercitation culpa qui dolor consequat exercitation fugiat laborum ex ea
-                    eiusmod ad do aliqua occaecat nisi ad irure sunt id pariatur Duis laboris amet exercitation veniam
-                    labore consectetur ea id quis eiusmod.</p>
+                <!--<p class="lead">Lorem ipsum Exercitation culpa qui dolor consequat exercitation fugiat laborum ex ea-->
+                <!--eiusmod ad do aliqua occaecat nisi ad irure sunt id pariatur Duis laboris amet exercitation veniam-->
+                <!--labore consectetur ea id quis eiusmod.</p>-->
+                <p class="lead">Front-end enthusiasts<br>
+                    Love Node.JS and visualization<br>
+                    Web full stack engineer
+                </p>
             </div>
 
         </div>
@@ -179,7 +183,7 @@
                     <strong>JQuery</strong>
                 </li>
                 <li>
-                    <div class="progress percent95"><span>75%</span></div>
+                    <div class="progress percent75"><span>75%</span></div>
                     <strong>Node.js</strong>
                 </li>
                 <li>
