docs:add self resume（Before 2018） feat:click to send email feat:click to download resume style:modify description information

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
         <li><a href="#"><i class="fa fa-github"></i></a></li>
         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+        <li><a href="mailto:qcstevengo@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a></li>
         <li><a href="#"><i class="fa fa-stack-overflow"></i></a></li>
     </ul> <!-- /intro-social -->
 
@@ -134,8 +134,8 @@
         <div class="col-six tab-full">
 
             <h3>Profile</h3>
-            <p>Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse in magna sint minim officia
-                consectetur nisi commodo ea magna pariatur nisi cillum.</p>
+            <p>Majoring in software engineering.two years ago as a front-end developer.<br>
+                Still enjoying my job...</p>
 
             <ul class="info-list">
                 <li>
@@ -148,12 +148,12 @@
                 </li>
                 <li>
                     <strong>Job:</strong>
-                    <span>Node.js Developer, Frontend Developer</span>
+                    <span>Frontend Developer,Node.js Developer</span>
                 </li>
-                <!--<li>-->
-                <!--<strong>Website:</strong>-->
-                <!--<span>www.Steven Leewebsite.com</span>-->
-                <!--</li>-->
+                <li>
+                    <strong>Mobil:</strong>
+                    <span>18193145031</span>
+                </li>
                 <li>
                     <strong>Email:</strong>
                     <span>qcstevengo@gmail.com</span>
@@ -166,8 +166,10 @@
         <div class="col-six tab-full">
 
             <h3>Skills</h3>
-            <p>Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse in magna sint minim officia
-                consectetur nisi commodo ea magna pariatur nisi cillum.</p>
+            <p>
+                As a familiar front-end developer proficient in UI/UX.Familiar with various http protocols and privilege
+                authentication.Familiar with the mainstream web framework.
+            </p>
 
             <ul class="skill-bars">
                 <li>
@@ -179,7 +181,7 @@
                     <strong>CSS3</strong>
                 </li>
                 <li>
-                    <div class="progress percent70"><span>70%</span></div>
+                    <div class="progress percent80"><span>80%</span></div>
                     <strong>JQuery</strong>
                 </li>
                 <li>
@@ -187,7 +189,6 @@
                     <strong>Node.js</strong>
                 </li>
                 <li>
-
                     <div class="progress percent75"><span>75%</span></div>
                     <strong>AngularJS</strong>
                 </li>
@@ -201,7 +202,8 @@
     <div class="row button-section">
         <div class="col-twelve">
             <a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
-            <a href="#" title="Download CV" class="button button-primary">Download CV</a>
+            <a title="Download CV" class="button button-primary" href="docs/resume-lichen.pdf" download="test">Download
+                CV</a>
         </div>
     </div>
 
@@ -303,80 +305,6 @@
     </div> <!-- /resume-timeline -->
 
     <div class="row resume-timeline">
-
-        <div class="col-twelve resume-header">
-
-            <h2>Education</h2>
-
-        </div> <!-- /resume-header -->
-
-        <div class="col-twelve">
-
-            <div class="timeline-wrap">
-
-                <div class="timeline-block">
-
-                    <div class="timeline-ico">
-                        <i class="fa fa-briefcase"></i>
-                    </div>
-
-                    <div class="timeline-header">
-                        <h3>Master Degree</h3>
-                        <p>July 2015 - Present</p>
-                    </div>
-
-                    <div class="timeline-content">
-                        <h4>University of Life</h4>
-                        <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat
-                            laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse
-                            cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
-                    </div>
-
-                </div> <!-- /timeline-block -->
-
-                <div class="timeline-block">
-
-                    <div class="timeline-ico">
-                        <i class="fa fa-briefcase"></i>
-                    </div>
-
-                    <div class="timeline-header">
-                        <h3>Bachelor Degree</h3>
-                        <p>July 2014 - June 2015</p>
-                    </div>
-
-                    <div class="timeline-content">
-                        <h4>State Design University</h4>
-                        <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat
-                            laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse
-                            cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
-                    </div>
-
-                </div> <!-- /timeline-block -->
-
-                <div class="timeline-block">
-
-                    <div class="timeline-ico">
-                        <i class="fa fa-briefcase"></i>
-                    </div>
-
-                    <div class="timeline-header">
-                        <h3>Bachelor Degree</h3>
-                        <p>May 2013 - June 2014</p>
-                    </div>
-
-                    <div class="timeline-content">
-                        <h4>Design College</h4>
-                        <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat
-                            laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse
-                            cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
-                    </div>
-
-                </div> <!-- /timeline-block -->
-
-            </div> <!-- /timeline-wrap -->
-
-        </div> <!-- /col-twelve -->
 
     </div> <!-- /resume-timeline -->
 
