feat:add link (GitHub&Twitter) docs:add some description in main.js

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     ================================================== -->
     <meta charset="utf-8">
     <title>Steven Lee</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="self website">
+    <meta name="author" content="Steven Lee">
 
     <!-- mobile specific metas
     ================================================== -->
@@ -94,8 +94,8 @@
 
     <ul class="intro-social">
         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-        <li><a href="#"><i class="fa fa-github"></i></a></li>
-        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+        <li><a href="https://github.com/momodiy"><i class="fa fa-github"></i></a></li>
+        <li><a href="https://mobile.twitter.com/steven____lee"><i class="fa fa-twitter"></i></a></li>
         <li><a href="mailto:qcstevengo@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a></li>
         <li><a href="#"><i class="fa fa-stack-overflow"></i></a></li>
     </ul> <!-- /intro-social -->
@@ -246,7 +246,7 @@
 
                     <div class="timeline-header">
                         <h3>UI Designer</h3>
-                        <p>July 2015 - Present</p>
+                        <p>January 2018 - Present</p>
                     </div>
 
                     <div class="timeline-content">
@@ -981,10 +981,10 @@
 
             <ul class="footer-social">
                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa fa-behance"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                <li><a href="https://github.com/momodiy"><i class="fa fa-github"></i></a></li>
+                <li><a href="https://mobile.twitter.com/steven____lee"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="mailto:qcstevengo@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a></li>
+                <li><a href="#"><i class="fa fa-stack-overflow"></i></a></li>
             </ul>
 
         </div>
