style:add work experience

--- a/index.html
+++ b/index.html
@@ -245,15 +245,15 @@
                     </div>
 
                     <div class="timeline-header">
-                        <h3>UI Designer</h3>
+                        <h3>Fount-end developer</h3>
                         <p>January 2018 - Present</p>
                     </div>
 
                     <div class="timeline-content">
-                        <h4>Awesome Studio</h4>
-                        <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat
-                            laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse
-                            cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+                        <h4>Incat manage</h4>
+                        <p>灵猫智能安全分析系统管理端，主要负责使用es6编写页面逻辑、原生js模拟Angularjs组件实现权限控制逻辑（包含按钮级别和菜单级别）<br>
+                            echarts可视化数据展示<br>
+                            对接server端api操作配置信息</p>
                     </div>
 
                 </div> <!-- /timeline-block -->
@@ -266,11 +266,11 @@
 
                     <div class="timeline-header">
                         <h3>Front-end Developer</h3>
-                        <p>July 2014 - June 2015</p>
+                        <p>October 2017 - November 2017</p>
                     </div>
 
                     <div class="timeline-content">
-                        <h4>Super Cool Agency</h4>
+                        <h4>Erealm official website</h4>
                         <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat
                             laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse
                             cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
@@ -285,12 +285,32 @@
                     </div>
 
                     <div class="timeline-header">
-                        <h3>Web Designer</h3>
-                        <p>May 2013 - June 2014</p>
+                        <h3>Web Designer & Node.js Developer</h3>
+                        <p>May 2017 - November 2017</p>
                     </div>
 
                     <div class="timeline-content">
-                        <h4>Great Designs Studio</h4>
+                        <h4>Education Axis</h4>
+                        <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat
+                            laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse
+                            cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+                    </div>
+
+                </div> <!-- /timeline-block -->
+
+                <div class="timeline-block">
+
+                    <div class="timeline-ico">
+                        <i class="fa fa-graduation-cap"></i>
+                    </div>
+
+                    <div class="timeline-header">
+                        <h3>Web Designer & Node.js Developer</h3>
+                        <p>June 2016 - May 2017</p>
+                    </div>
+
+                    <div class="timeline-content">
+                        <h4>Intelligent education</h4>
                         <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat
                             laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse
                             cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
