--- a/index.html
+++ b/index.html
@@ -54,10 +54,8 @@
                     <li class="current"><a class="smoothscroll" href="#intro" title="">Home</a></li>
                     <li><a class="smoothscroll" href="#about" title="">About</a></li>
                     <li><a class="smoothscroll" href="#resume" title="">Resume</a></li>
-                    <li><a class="smoothscroll" href="#portfolio" title="">Portfolio</a></li>
                     <li><a class="smoothscroll" href="#services" title="">Services</a></li>
                     <li><a class="smoothscroll" href="#contact" title="">Contact</a></li>
-                    <li><a href="styles.html" title="">Style Demo</a></li>
                 </ul>
             </nav>
         </div> <!-- /top-bar -->
@@ -331,298 +329,6 @@
 </section> <!-- /features -->
 
 
-<!-- Portfolio Section
-================================================== -->
-<section id="portfolio">
-
-    <div class="row section-intro">
-        <div class="col-twelve">
-
-            <h5>Portfolio</h5>
-            <h1>Check Out Some of My Works.</h1>
-
-            <p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi
-                aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
-
-        </div>
-    </div> <!-- /section-intro-->
-
-    <div class="row portfolio-content">
-
-        <div class="col-twelve">
-
-            <!-- portfolio-wrapper -->
-            <div id="folio-wrapper" class="block-1-2 block-mob-full stack">
-
-                <div class="bgrid folio-item">
-                    <div class="item-wrap">
-                        <img src="images/portfolio/liberty.jpg" alt="Liberty">
-                        <a href="#modal-01" class="overlay">
-                            <div class="folio-item-table">
-                                <div class="folio-item-cell">
-                                    <h3 class="folio-title">Liberty</h3>
-                                    <span class="folio-types">
-		     					       	  Graphic Design
-		     					       </span>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </div> <!-- /folio-item -->
-
-                <div class="bgrid folio-item">
-                    <div class="item-wrap">
-                        <img src="images/portfolio/shutterbug.jpg" alt="Shutterbug">
-                        <a href="#modal-02" class="overlay">
-                            <div class="folio-item-table">
-                                <div class="folio-item-cell">
-                                    <h3 class="folio-title">Shutterbug</h3>
-                                    <span class="folio-types">
-		     					       	  Web Design
-		     					      </span>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </div> <!-- /folio-item -->
-
-                <div class="bgrid folio-item">
-                    <div class="item-wrap">
-                        <img src="images/portfolio/clouds.jpg" alt="Clouds">
-                        <a href="#modal-03" class="overlay">
-                            <div class="folio-item-table">
-                                <div class="folio-item-cell">
-                                    <h3 class="folio-title">Clouds</h3>
-                                    <span class="folio-types">
-		     					       	  Web Design
-		     					      </span>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </div> <!-- /folio-item -->
-
-                <div class="bgrid folio-item">
-                    <div class="item-wrap">
-                        <img src="images/portfolio/beetle.jpg" alt="Beetle">
-                        <a href="#modal-04" class="overlay">
-                            <div class="folio-item-table">
-                                <div class="folio-item-cell">
-                                    <h3 class="folio-title">Beetle</h3>
-                                    <span class="folio-types">
-		     					       	  Branding
-		     					      </span>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </div> <!-- /folio-item -->
-
-                <div class="bgrid folio-item">
-                    <div class="item-wrap">
-                        <img src="images/portfolio/lighthouse.jpg" alt="Lighthouse">
-                        <a href="#modal-05" class="overlay">
-                            <div class="folio-item-table">
-                                <div class="folio-item-cell">
-                                    <h3 class="folio-title">Lighthouse</h3>
-                                    <span class="folio-types">
-		     					       	  Web Development
-		     					      </span>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </div> <!-- /folio-item -->
-
-                <div class="bgrid folio-item">
-                    <div class="item-wrap">
-                        <img src="images/portfolio/salad.jpg" alt="Salad">
-                        <a href="#modal-06" class="overlay">
-                            <div class="folio-item-table">
-                                <div class="folio-item-cell">
-                                    <h3 class="folio-title">Salad</h3>
-                                    <span class="folio-types">
-		     					       	  Branding
-		     					      </span>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </div> <!-- /folio-item -->
-
-                <div class="copyrights">Collect from <a href="http://www.cssmoban.com/">企业网站模板</a></div>
-
-                <!-- modal popups - begin
-                ============================================================= -->
-                <div id="modal-01" class="popup-modal slider mfp-hide">
-
-                    <div class="media">
-                        <img src="images/portfolio/modals/m-liberty.jpg" alt=""/>
-                    </div>
-
-                    <div class="description-box">
-                        <h4>Liberty</h4>
-                        <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor,
-                            nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-
-                        <div class="categories">Web Development</div>
-                    </div>
-
-                    <div class="link-box">
-                        <a href="http://www.behance.net">Details</a>
-                        <a href="#" class="popup-modal-dismiss">Close</a>
-                    </div>
-
-                </div> <!-- /modal-01 -->
-
-                <div id="modal-02" class="popup-modal slider mfp-hide">
-
-                    <div class="media">
-                        <img src="images/portfolio/modals/m-shutterbug.jpg" alt=""/>
-                    </div>
-
-                    <div class="description-box">
-                        <h4>Shutterbug</h4>
-                        <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor,
-                            nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-
-                        <div class="categories">Web Design</div>
-                    </div>
-
-                    <div class="link-box">
-                        <a href="http://www.behance.net">Details</a>
-                        <a href="#" class="popup-modal-dismiss">Close</a>
-                    </div>
-
-                </div> <!-- /modal-02 -->
-
-                <div id="modal-03" class="popup-modal slider mfp-hide">
-
-                    <div class="media">
-                        <img src="images/portfolio/modals/m-clouds.jpg" alt=""/>
-                    </div>
-
-                    <div class="description-box">
-                        <h4>Clouds</h4>
-                        <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor,
-                            nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-
-                        <div class="categories">Web Design</div>
-                    </div>
-
-                    <div class="link-box">
-                        <a href="http://www.behance.net">Details</a>
-                        <a href="#" class="popup-modal-dismiss">Close</a>
-                    </div>
-
-                </div> <!-- /modal-03 -->
-
-                <div id="modal-04" class="popup-modal slider mfp-hide">
-
-                    <div class="media">
-                        <img src="images/portfolio/modals/m-beetle.jpg" alt=""/>
-                    </div>
-
-                    <div class="description-box">
-                        <h4>Beetle</h4>
-                        <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor,
-                            nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-
-                        <div class="categories">Branding</div>
-                    </div>
-
-                    <div class="link-box">
-                        <a href="http://www.behance.net">Details</a>
-                        <a href="#" class="popup-modal-dismiss">Close</a>
-                    </div>
-
-                </div> <!-- /modal-04 -->
-
-                <div id="modal-05" class="popup-modal slider mfp-hide">
-
-                    <div class="media">
-                        <img src="images/portfolio/modals/m-lighthouse.jpg" alt=""/>
-                    </div>
-
-                    <div class="description-box">
-                        <h4>Lighthouse</h4>
-                        <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor,
-                            nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-
-                        <div class="categories">Web Development</div>
-                    </div>
-
-                    <div class="link-box">
-                        <a href="http://www.behance.net">Details</a>
-                        <a href="#" class="popup-modal-dismiss">Close</a>
-                    </div>
-
-                </div> <!-- /modal-05 -->
-
-                <div id="modal-06" class="popup-modal slider mfp-hide">
-
-                    <div class="media">
-                        <img src="images/portfolio/modals/m-salad.jpg" alt=""/>
-                    </div>
-
-                    <div class="description-box">
-                        <h4>Salad</h4>
-                        <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor,
-                            nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-
-                        <div class="categories">Branding</div>
-                    </div>
-
-                    <div class="link-box">
-                        <a href="http://www.behance.net">Details</a>
-                        <a href="#" class="popup-modal-dismiss">Close</a>
-                    </div>
-
-                </div> <!-- /modal-06 -->
-
-
-                <!-- modal popups - end
-             ============================================================= -->
-
-            </div> <!-- /portfolio-wrapper -->
-
-        </div>  <!-- /twelve -->
-
-    </div> <!-- /portfolio-content -->
-
-</section> <!-- /portfolio -->
-
-
-<!-- CTA Section
-================================================== -->
-<section id="cta" class="grey-section">
-
-    <div class="row cta-content">
-
-        <div class="col-twelve section-ads">
-
-            <h2 class="h01"><a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">Styleshout Recommends
-                Dreamhost.</a></h2>
-
-            <p class="lead">
-                Looking for an awesome and reliable webhosting? Try <a
-                    href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT"><span>DreamHost</span></a>.
-                Get <span>$50 off</span> when you sign up with the promocode <span>styleshout</span>.
-                <!-- Simply type	the promocode in the box labeled “Promo Code” when placing your order. -->
-            </p>
-
-            <div class="action">
-                <a class="button button-primary large" href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">Sign Up
-                    Now</a>
-            </div>
-
-        </div>
-
-    </div> <!-- /cta-content -->
-
-</section> <!-- /cta -->
-
-
 <!-- services Section
 ================================================== -->
 <section id="services">
@@ -776,7 +482,7 @@
                     </div>
 
                     <h3 class="stat-count">
-                        1500
+                        50
                     </h3>
 
                     <h5 class="stat-title">
@@ -792,11 +498,11 @@
                     </div>
 
                     <h3 class="stat-count">
-                        900
+                        100
                     </h3>
 
                     <h5 class="stat-title">
-                        Happy Clients
+                        Published blog
                     </h5>
 
                 </div> <!-- /stat -->
@@ -808,11 +514,11 @@
                     </div>
 
                     <h3 class="stat-count">
-                        200
+                        30000
                     </h3>
 
                     <h5 class="stat-title">
-                        Awards Received
+                        Blog Browsing
                     </h5>
 
                 </div> <!-- /stat -->
@@ -840,11 +546,11 @@
                     </div>
 
                     <h3 class="stat-count">
-                        1500
+                        100000
                     </h3>
 
                     <h5 class="stat-title">
-                        Coffee Cups
+                        Coding Lines
                     </h5>
 
                 </div> <!-- /stat -->
@@ -883,9 +589,9 @@
             <h5>Contact</h5>
             <h1>I'd Love To Hear From You.</h1>
 
-            <p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi
-                aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
-
+            <p class="lead">If you have anything to find me you can leave me a message on this website.Please leave your
+                correct information if it is convenient.<br>
+                I'm Looking forward to your message,thank you!</p>
         </div>
     </div> <!-- /section-intro -->
 
