:pencil: edit work description

--- a/index.html
+++ b/index.html
@@ -249,9 +249,12 @@
 
                     <div class="timeline-content">
                         <h4>Incat manage</h4>
-                        <p>灵猫智能安全分析系统管理端，主要负责使用es6编写页面逻辑、原生js模拟Angularjs组件实现权限控制逻辑（包含按钮级别和菜单级别）<br>
-                            echarts可视化数据展示<br>
-                            对接server端api操作配置信息</p>
+                        <p>The incat security analysis system management terminal is mainly responsible for using
+                            es6/es7 to write page logic and native js simulation Angularjs components to implement
+                            privilege control logic (including button level and menu level)<br>
+                            Echarts visualization data display <br>
+                            Docking server api operation configuration information
+                        </p>
                     </div>
 
                 </div> <!-- /timeline-block -->
@@ -269,9 +272,10 @@
 
                     <div class="timeline-content">
                         <h4>Erealm official website</h4>
-                        <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat
-                            laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse
-                            cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+                        <p>Developed using maen.js（mongoose+angularjs+node+express）<br>
+                            Use angular-translate to complete multiple languages<br>
+                            Import https(SSL) to ensure data transmission security
+                        </p>
                     </div>
 
                 </div> <!-- /timeline-block -->
@@ -289,9 +293,13 @@
 
                     <div class="timeline-content">
                         <h4>Education Axis</h4>
-                        <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat
-                            laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse
-                            cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+                        <p>Developed using maen.js（mongoose+angularjs+node+express）<br>
+                            Use the bootstrap(less/sass) page layout<br>
+                            Write interfaces that conforms to the restful API specification<br>
+                            use mocha API test(should.js assertion library)<BR>
+                            use grunt to package and compilation<br>
+                            permission authentication（http Basic/http bearer/OAuth2）<br>
+                            Design database table structure</p>
                     </div>
 
                 </div> <!-- /timeline-block -->
@@ -309,9 +317,12 @@
 
                     <div class="timeline-content">
                         <h4>Intelligent education</h4>
-                        <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat
-                            laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse
-                            cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+                        <p>Developed using maen.js（mongoose+angularjs+node+express）<br>
+                            Use the bootstrap(less/sass) page layout<br>
+                            Write interfaces that conforms to the restful API specification<br>
+                            use mocha API test(chai.js assertion library)<br>
+                            use grunt to package and compilation
+                        </p>
                     </div>
 
                 </div> <!-- /timeline-block -->
@@ -341,8 +352,8 @@
             <h5>Services</h5>
             <h1>What Can I Do For You?</h1>
 
-            <p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi
-                aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+            <p class="lead">A beautiful responsive website、a lightweight but high performance node server,a beautiful
+                animation or a fun mini-game...if you like.</p>
 
         </div>
     </div> <!-- /section-intro -->
@@ -502,7 +513,7 @@
                     </h3>
 
                     <h5 class="stat-title">
-                        Published blog
+                        Published Blog
                     </h5>
 
                 </div> <!-- /stat -->
@@ -591,7 +602,7 @@
 
             <p class="lead">If you have anything to find me you can leave me a message on this website.Please leave your
                 correct information if it is convenient.<br>
-                I'm Looking forward to your message,thank you!</p>
+                I'm Looking forward to your message.thank you!</p>
         </div>
     </div> <!-- /section-intro -->
 
@@ -685,7 +696,7 @@
 
             <h5>Call Me At</h5>
 
-            <p>Mobile: (+86) 181 9314 ****<br>
+            <p>Mobile: (+86) 181 9314 5031<br>
                 <!--Mobile: (+63) 555 0100<br>-->
                 <!--Fax: (+63) 555 0101-->
             </p>
