--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
             <div class="col-twelve">
 
-                <h5>Hello, World.</h5>
+                <h5>Hello World!</h5>
                 <h1>I'm Steven Lee.</h1>
 
                 <p class="intro-position">
