:lipstick: add css pseudo-element in stats section

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="col-six tab-full">
 
             <h3>Profile</h3>
-            <p>Majoring in software engineering.two years ago as a front-end developer.<br>
+            <p>Majoring in software engineering.Became a front-end engineer two years ago<br>
                 Still enjoying my job...</p>
 
             <ul class="info-list">
