--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
             <h5>Resume</h5>
             <h1>More of my credentials.</h1>
 
-            <p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi
-                aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+            <p class="lead">Because of love, so do your best to be a better man.
+            </p>
 
         </div>
     </div> <!-- /section-intro-->
