:racehorse: SEO optimization by modifying the meta

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     ================================================== -->
     <meta charset="utf-8">
     <title>Steven Lee</title>
-    <meta name="description" content="self website">
-    <meta name="author" content="Steven Lee">
+    <meta name="Title" content="self website by Steven Lee">
+    <meta name="Author" content="Steven Lee">
+    <meta name="description" content="self introduce,project demo online,blog"/>
+    <meta name="Keywords" content="github-page resume">
 
     <!-- mobile specific metas
     ================================================== -->
