--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
      ================================================== -->
     <link rel="icon" type="image/png" href="favicon.png">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122234127-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-122234127-1');
+    </script>
+
 </head>
 
 <body id="top">
