:sparkles: Search engine optimization

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Steven Lee</title>
     <meta name="Title" content="self website by Steven Lee">
     <meta name="Author" content="Steven Lee">
-    <meta name="description" content="self introduce,project demo online,blog"/>
+    <meta name="description" content="self website by Steven Lee,contains0 self introduce、project demo online、blog..."/>
     <meta name="Keywords" content="github-page resume">
 
     <!-- mobile specific metas
@@ -43,6 +43,19 @@
       gtag('js', new Date());
 
       gtag('config', 'UA-122234127-1');
+    </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://pages.github.com",
+      "@type": "personal",
+      "url": "https://momodiy.github.io",
+      "name": "Steven Lee's github page",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "email": "qcstevengo@gmail.com",
+        "contactType": "Customer service"
+      }
+    }
     </script>
 
 </head>
