:sparkles: Search engine optimization

--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
 
     <ul class="intro-social">
         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-        <li><a href="https://github.com/momodiy"><i class="fa fa-github"></i></a></li>
-        <li><a href="https://mobile.twitter.com/steven____lee"><i class="fa fa-twitter"></i></a></li>
-        <li><a href="mailto:qcstevengo@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a></li>
-        <li><a href="#"><i class="fa fa-stack-overflow"></i></a></li>
+        <li><a href="https://github.com/momodiy" rel="nofollow"><i class="fa fa-github"></i></a></li>
+        <li><a href="https://mobile.twitter.com/steven____lee" rel="nofollow"><i class="fa fa-twitter"></i></a></li>
+        <li><a href="mailto:qcstevengo@gmail.com" target="_blank" rel="nofollow"><i class="fa fa-envelope"></i></a></li>
+        <li><a href="#"><i class="fa fa-stack-overflow" rel="nofollow"></i></a></li>
     </ul> <!-- /intro-social -->
 
 </section> <!-- /intro -->
@@ -225,7 +225,7 @@
     <div class="row button-section">
         <div class="col-twelve">
             <a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
-            <a title="Download CV" class="button button-primary" href="docs/resume-lichen.pdf" download="test">Download
+            <a title="Download CV" class="button button-primary" href="docs/resume-lichen.pdf" download="test" rel="nofollow">Download
                 CV</a>
         </div>
     </div>
@@ -742,11 +742,11 @@
         <div class="col-six tab-full pull-right social">
 
             <ul class="footer-social">
-                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="https://github.com/momodiy"><i class="fa fa-github"></i></a></li>
-                <li><a href="https://mobile.twitter.com/steven____lee"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="mailto:qcstevengo@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a></li>
-                <li><a href="#"><i class="fa fa-stack-overflow"></i></a></li>
+                <li><a href="#"><i class="fa fa-facebook" rel="nofollow"></i></a></li>
+                <li><a href="https://github.com/momodiy" rel="nofollow"><i class="fa fa-github"></i></a></li>
+                <li><a href="https://mobile.twitter.com/steven____lee" rel="nofollow"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="mailto:qcstevengo@gmail.com" target="_blank" rel="nofollow"><i class="fa fa-envelope"></i></a></li>
+                <li><a href="#" rel="nofollow"><i class="fa fa-stack-overflow"></i></a></li>
             </ul>
 
         </div>
