:heavy_plus_sign: add images used in blogs

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     <div class="row button-section">
         <div class="col-twelve">
             <a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
-            <a title="Download CV" class="button button-primary" href="docs/resume-lichen.pdf" download="test" rel="nofollow">Download
+            <a title="Download CV" class="button button-primary" href="docs/resume.pdf" download="test" rel="nofollow">Download
                 CV</a>
         </div>
     </div>
