:lock: hide sensitive info

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 </li>
                 <li>
                     <strong>Mobil:</strong>
-                    <span>18193145031</span>
+                    <span>181****5031</span>
                 </li>
                 <li>
                     <strong>Email:</strong>
