:lipstick: add favicon for online demo

--- a/demo/gobang/index.html
+++ b/demo/gobang/index.html
@@ -5,6 +5,7 @@
 		<title>五子棋</title>
 		<link rel="stylesheet" type="text/css" href="css/main.css"/>
 		<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport"/>
+		<link rel="icon" type="image/png" href="../../favicon.png">
 	</head>
 	<body>		
 		<div id="showMessage">
