--- a/demo/sudoku/index.html
+++ b/demo/sudoku/index.html
@@ -5,6 +5,7 @@
     <meta name='viewport' content="width=device-width, initial-scale=1 user-scalable=no">
     <title>数独</title>
     <link rel="stylesheet" href="css/main.css" type="text/css">
+    <link rel="icon" type="image/png" href="../../favicon.png">
 </head>
 <body>
 <!--标题-->
