:construction: upload img resource

--- a/demo/demo/index.html
+++ b/demo/demo/index.html
@@ -9,10 +9,10 @@
     <meta name="full-screen" content="yes">
     <meta name="x5-fullscreen" content="true">
     <title>vue2-answer-demo</title>
-  <link href="../demo/demo/static/css/app.css" rel="stylesheet"></head>
+  <link href="../demo/static/css/app.css" rel="stylesheet"></head>
   <body>
     <div id="app">
     	<router-view></router-view>
     </div>
-  <script type="text/javascript" src="../demo/demo/static/js/manifest.js"></script><script type="text/javascript" src="../demo/demo/static/js/vendor.js"></script><script type="text/javascript" src="../demo/demo/static/js/app.js"></script></body>
+  <script type="text/javascript" src="../demo/static/js/manifest.js"></script><script type="text/javascript" src="../demo/static/js/vendor.js"></script><script type="text/javascript" src="../demo/static/js/app.js"></script></body>
 </html>
