--- a/demo/answer/index.html
+++ b/demo/answer/index.html
@@ -8,11 +8,11 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="full-screen" content="yes">
     <meta name="x5-fullscreen" content="true">
-    <title>vue2-answer-demo</title>
-  <link href="../demo/static/css/app.css" rel="stylesheet"></head>
+    <title>vue2-happyfri</title>
+  <link href="/answer/static/css/app.css" rel="stylesheet"></head>
   <body>
     <div id="app">
     	<router-view></router-view>
     </div>
-  <script type="text/javascript" src="../demo/static/js/manifest.js"></script><script type="text/javascript" src="../demo/static/js/vendor.js"></script><script type="text/javascript" src="../demo/static/js/app.js"></script></body>
+  <script type="text/javascript" src="/answer/static/js/manifest.js"></script><script type="text/javascript" src="/answer/static/js/vendor.js"></script><script type="text/javascript" src="/answer/static/js/app.js"></script></body>
 </html>
