--- a/demo/shuhe-manage/index.html
+++ b/demo/shuhe-manage/index.html
@@ -1,4 +1,12 @@
-<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>steven-admin</title><style>.app-loading {
+<!DOCTYPE html>
+<html lang="">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="icon" href="/favicon.ico">
+    <title>steven-admin</title>
+    <style>.app-loading {
         display: flex;
         width: 100%;
         height: 100%;
@@ -6,9 +14,9 @@
         align-items: center;
         flex-direction: column;
         background-color: #F0F2F5;
-      }
+    }
 
-      .app-loading .app-loading-wrap {
+    .app-loading .app-loading-wrap {
         position: absolute;
         top: 50%;
         left: 50%;
@@ -18,32 +26,32 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
-      }
+    }
 
-      .app-loading .dots {
+    .app-loading .dots {
         display: flex;
         padding: 98px;
         justify-content: center;
         align-items: center;
-      }
+    }
 
-      .app-loading .app-loading-title {
+    .app-loading .app-loading-title {
         display: flex;
         margin-top: 30px;
         font-size: 30px;
         color: rgba(0, 0, 0, 0.85);
         justify-content: center;
         align-items: center;
-      }
+    }
 
-      .app-loading .app-loading-logo {
+    .app-loading .app-loading-logo {
         display: block;
         width: 90px;
         margin: 0 auto;
         margin-bottom: 20px;
-      }
+    }
 
-      .dot {
+    .dot {
         position: relative;
         display: inline-block;
         width: 48px;
@@ -53,9 +61,9 @@
         transform: rotate(45deg);
         box-sizing: border-box;
         animation: antRotate 1.2s infinite linear;
-      }
+    }
 
-      .dot i {
+    .dot i {
         position: absolute;
         display: block;
         width: 20px;
@@ -66,56 +74,103 @@
         transform: scale(0.75);
         animation: antSpinMove 1s infinite linear alternate;
         transform-origin: 50% 50%;
-      }
+    }
 
-      .dot i:nth-child(1) {
+    .dot i:nth-child(1) {
         top: 0;
         left: 0;
-      }
+    }
 
-      .dot i:nth-child(2) {
+    .dot i:nth-child(2) {
         top: 0;
         right: 0;
         -webkit-animation-delay: 0.4s;
         animation-delay: 0.4s;
-      }
+    }
 
-      .dot i:nth-child(3) {
+    .dot i:nth-child(3) {
         right: 0;
         bottom: 0;
         -webkit-animation-delay: 0.8s;
         animation-delay: 0.8s;
-      }
+    }
 
-      .dot i:nth-child(4) {
+    .dot i:nth-child(4) {
         bottom: 0;
         left: 0;
         -webkit-animation-delay: 1.2s;
         animation-delay: 1.2s;
-      }
+    }
 
-      @keyframes antRotate {
+    @keyframes antRotate {
         to {
-          -webkit-transform: rotate(405deg);
-          transform: rotate(405deg);
+            -webkit-transform: rotate(405deg);
+            transform: rotate(405deg);
         }
-      }
+    }
 
-      @-webkit-keyframes antRotate {
+    @-webkit-keyframes antRotate {
         to {
-          -webkit-transform: rotate(405deg);
-          transform: rotate(405deg);
+            -webkit-transform: rotate(405deg);
+            transform: rotate(405deg);
         }
-      }
+    }
 
-      @keyframes antSpinMove {
+    @keyframes antSpinMove {
         to {
-          opacity: 1;
+            opacity: 1;
         }
-      }
+    }
 
-      @-webkit-keyframes antSpinMove {
+    @-webkit-keyframes antSpinMove {
         to {
-          opacity: 1;
+            opacity: 1;
         }
-      }</style><link href="/static/css/chunk-02917e97.8aa6f351.css" rel="prefetch"><link href="/static/css/chunk-2c7dee6c.4e53bf2a.css" rel="prefetch"><link href="/static/css/chunk-39d95c72.b3299659.css" rel="prefetch"><link href="/static/css/chunk-3a1984ea.8f689fcc.css" rel="prefetch"><link href="/static/css/chunk-64d303ce.cb1bff0f.css" rel="prefetch"><link href="/static/css/chunk-6e3f4418.4f22b07c.css" rel="prefetch"><link href="/static/css/chunk-ab199524.f3516f10.css" rel="prefetch"><link href="/static/js/chunk-02917e97.8b01397a.js" rel="prefetch"><link href="/static/js/chunk-2c7dee6c.7cf1db10.js" rel="prefetch"><link href="/static/js/chunk-2d0a4b22.8294e9a4.js" rel="prefetch"><link href="/static/js/chunk-2d0ab118.bb99a03c.js" rel="prefetch"><link href="/static/js/chunk-2d0b6a9b.7c5c4f21.js" rel="prefetch"><link href="/static/js/chunk-2d0b90b4.58ae239e.js" rel="prefetch"><link href="/static/js/chunk-2d0c770e.474816f8.js" rel="prefetch"><link href="/static/js/chunk-2d0d6363.02202ec6.js" rel="prefetch"><link href="/static/js/chunk-2d0d657e.eaf827c7.js" rel="prefetch"><link href="/static/js/chunk-2d0dda50.1c6d9135.js" rel="prefetch"><link href="/static/js/chunk-2d0df2ce.fa120603.js" rel="prefetch"><link href="/static/js/chunk-2d0f050b.021c0d8b.js" rel="prefetch"><link href="/static/js/chunk-39d95c72.85a39403.js" rel="prefetch"><link href="/static/js/chunk-3a1984ea.e0089422.js" rel="prefetch"><link href="/static/js/chunk-64d303ce.a3487f79.js" rel="prefetch"><link href="/static/js/chunk-6e3f4418.584bb5e5.js" rel="prefetch"><link href="/static/js/chunk-74b4d1db.8769a210.js" rel="prefetch"><link href="/static/js/chunk-ab199524.04a943da.js" rel="prefetch"><link href="/static/css/app.bcb937bc.css" rel="preload" as="style"><link href="/static/css/chunk-vendors.85e72a0e.css" rel="preload" as="style"><link href="/static/js/app.af347d0e.js" rel="preload" as="script"><link href="/static/js/chunk-vendors.21f016d4.js" rel="preload" as="script"><link href="/static/css/chunk-vendors.85e72a0e.css" rel="stylesheet"><link href="/static/css/app.bcb937bc.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but steven-admin doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"><div class="app-loading"><div class="app-loading-wrap"><div class="app-loading-dots"><span class="dot dot-spin"><i></i><i></i><i></i><i></i></span></div><div class="app-loading-title">steven-admin</div></div></div></div><script src="/static/js/chunk-vendors.21f016d4.js"></script><script src="/static/js/app.af347d0e.js"></script></body></html>
+    }</style>
+    <link href="./static/css/chunk-02917e97.8aa6f351.css" rel="prefetch">
+    <link href="./static/css/chunk-2c7dee6c.4e53bf2a.css" rel="prefetch">
+    <link href="./static/css/chunk-39d95c72.b3299659.css" rel="prefetch">
+    <link href="./static/css/chunk-3a1984ea.8f689fcc.css" rel="prefetch">
+    <link href="./static/css/chunk-64d303ce.cb1bff0f.css" rel="prefetch">
+    <link href="./static/css/chunk-6e3f4418.4f22b07c.css" rel="prefetch">
+    <link href="./static/css/chunk-ab199524.f3516f10.css" rel="prefetch">
+    <link href="./static/js/chunk-02917e97.8b01397a.js" rel="prefetch">
+    <link href="./static/js/chunk-2c7dee6c.7cf1db10.js" rel="prefetch">
+    <link href="./static/js/chunk-2d0a4b22.8294e9a4.js" rel="prefetch">
+    <link href="./static/js/chunk-2d0ab118.bb99a03c.js" rel="prefetch">
+    <link href="./static/js/chunk-2d0b6a9b.7c5c4f21.js" rel="prefetch">
+    <link href="./static/js/chunk-2d0b90b4.58ae239e.js" rel="prefetch">
+    <link href="./static/js/chunk-2d0c770e.474816f8.js" rel="prefetch">
+    <link href="./static/js/chunk-2d0d6363.02202ec6.js" rel="prefetch">
+    <link href="./static/js/chunk-2d0d657e.eaf827c7.js" rel="prefetch">
+    <link href="./static/js/chunk-2d0dda50.1c6d9135.js" rel="prefetch">
+    <link href="./static/js/chunk-2d0df2ce.fa120603.js" rel="prefetch">
+    <link href="./static/js/chunk-2d0f050b.021c0d8b.js" rel="prefetch">
+    <link href="./static/js/chunk-39d95c72.85a39403.js" rel="prefetch">
+    <link href="./static/js/chunk-3a1984ea.e0089422.js" rel="prefetch">
+    <link href="./static/js/chunk-64d303ce.a3487f79.js" rel="prefetch">
+    <link href="./static/js/chunk-6e3f4418.584bb5e5.js" rel="prefetch">
+    <link href="./static/js/chunk-74b4d1db.8769a210.js" rel="prefetch">
+    <link href="./static/js/chunk-ab199524.04a943da.js" rel="prefetch">
+    <link href="./static/css/app.bcb937bc.css" rel="preload" as="style">
+    <link href="./static/css/chunk-vendors.85e72a0e.css" rel="preload" as="style">
+    <link href="./static/js/app.af347d0e.js" rel="preload" as="script">
+    <link href="./static/js/chunk-vendors.21f016d4.js" rel="preload" as="script">
+    <link href="./static/css/chunk-vendors.85e72a0e.css" rel="stylesheet">
+    <link href="./static/css/app.bcb937bc.css" rel="stylesheet">
+</head>
+<body>
+<noscript><strong>We're sorry but steven-admin doesn't work properly without JavaScript enabled. Please enable it to
+    continue.</strong></noscript>
+<div id="app">
+    <div class="app-loading">
+        <div class="app-loading-wrap">
+            <div class="app-loading-dots"><span class="dot dot-spin"><i></i><i></i><i></i><i></i></span></div>
+            <div class="app-loading-title">steven-admin</div>
+        </div>
+    </div>
+</div>
+<script src="./static/js/chunk-vendors.21f016d4.js"></script>
+<script src="./static/js/app.af347d0e.js"></script>
+</body>
+</html>
