:bookmark: shuhe manage preview

--- a/demo/shuhe-manage/index.html
+++ b/demo/shuhe-manage/index.html
@@ -1,13 +1,4 @@
-<!DOCTYPE html>
-<html lang="">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="/favicon.ico">
-    <title>steven-admin</title>
-    <style>
-      .app-loading {
+<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/demo/shuhe-manage/favicon.ico"><title>steven-admin</title><style>.app-loading {
         display: flex;
         width: 100%;
         height: 100%;
@@ -127,25 +118,4 @@
         to {
           opacity: 1;
         }
-      }
-    </style>
-  <link href="/static/js/0.js" rel="prefetch"><link href="/static/js/1.js" rel="prefetch"><link href="/static/js/10.js" rel="prefetch"><link href="/static/js/11.js" rel="prefetch"><link href="/static/js/12.js" rel="prefetch"><link href="/static/js/13.js" rel="prefetch"><link href="/static/js/14.js" rel="prefetch"><link href="/static/js/15.js" rel="prefetch"><link href="/static/js/16.js" rel="prefetch"><link href="/static/js/2.js" rel="prefetch"><link href="/static/js/3.js" rel="prefetch"><link href="/static/js/4.js" rel="prefetch"><link href="/static/js/5.js" rel="prefetch"><link href="/static/js/6.js" rel="prefetch"><link href="/static/js/7.js" rel="prefetch"><link href="/static/js/8.js" rel="prefetch"><link href="/static/js/9.js" rel="prefetch"><link href="/static/js/app.js" rel="preload" as="script"><link href="/static/js/chunk-vendors.js" rel="preload" as="script"></head>
-  <body>
-    <noscript>
-      <strong>We're sorry but steven-admin doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app">
-      <div class="app-loading">
-        <div class="app-loading-wrap">
-          <div class="app-loading-dots">
-            <span class="dot dot-spin"><i></i><i></i><i></i><i></i></span>
-          </div>
-          <div class="app-loading-title">
-            steven-admin
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- built files will be auto injected -->
-  <script type="text/javascript" src="/static/js/chunk-vendors.js"></script><script type="text/javascript" src="/static/js/app.js"></script></body>
-</html>
+      }</style><link href="/demo/shuhe-manage/static/css/chunk-25fed471.46c09632.css" rel="prefetch"><link href="/demo/shuhe-manage/static/css/chunk-31ac827a.1d3498db.css" rel="prefetch"><link href="/demo/shuhe-manage/static/css/chunk-3964841c.4f22b07c.css" rel="prefetch"><link href="/demo/shuhe-manage/static/css/chunk-557e569c.829e0ff4.css" rel="prefetch"><link href="/demo/shuhe-manage/static/css/chunk-6ae8d838.a86227fc.css" rel="prefetch"><link href="/demo/shuhe-manage/static/css/chunk-72b9d7ac.eb93dba3.css" rel="prefetch"><link href="/demo/shuhe-manage/static/css/chunk-bda4055a.b3299659.css" rel="prefetch"><link href="/demo/shuhe-manage/static/js/chunk-25fed471.65c4d532.js" rel="prefetch"><link href="/demo/shuhe-manage/static/js/chunk-2d0a4b22.e7b464e5.js" rel="prefetch"><link href="/demo/shuhe-manage/static/js/chunk-2d0ab118.17cc3a96.js" rel="prefetch"><link href="/demo/shuhe-manage/static/js/chunk-2d0b6a9b.0ff0aa22.js" rel="prefetch"><link href="/demo/shuhe-manage/static/js/chunk-2d0b90b4.238569bb.js" rel="prefetch"><link href="/demo/shuhe-manage/static/js/chunk-2d0c770e.350327c1.js" rel="prefetch"><link href="/demo/shuhe-manage/static/js/chunk-2d0d6363.b8df49a5.js" rel="prefetch"><link href="/demo/shuhe-manage/static/js/chunk-2d0d657e.d457ab2f.js" rel="prefetch"><link href="/demo/shuhe-manage/static/js/chunk-2d0df2ce.c15d516a.js" rel="prefetch"><link href="/demo/shuhe-manage/static/js/chunk-2d0f050b.339d9c79.js" rel="prefetch"><link href="/demo/shuhe-manage/static/js/chunk-31ac827a.146ef1d6.js" rel="prefetch"><link href="/demo/shuhe-manage/static/js/chunk-3964841c.53ba5c81.js" rel="prefetch"><link href="/demo/shuhe-manage/static/js/chunk-557e569c.a800df81.js" rel="prefetch"><link href="/demo/shuhe-manage/static/js/chunk-6ae8d838.2c37c060.js" rel="prefetch"><link href="/demo/shuhe-manage/static/js/chunk-72b9d7ac.d6e469c9.js" rel="prefetch"><link href="/demo/shuhe-manage/static/js/chunk-74b4d1db.f20177df.js" rel="prefetch"><link href="/demo/shuhe-manage/static/js/chunk-bda4055a.8eab7945.js" rel="prefetch"><link href="/demo/shuhe-manage/static/css/app.2f1eb7e5.css" rel="preload" as="style"><link href="/demo/shuhe-manage/static/css/chunk-vendors.85e72a0e.css" rel="preload" as="style"><link href="/demo/shuhe-manage/static/js/app.43bd6279.js" rel="preload" as="script"><link href="/demo/shuhe-manage/static/js/chunk-vendors.e6a36a36.js" rel="preload" as="script"><link href="/demo/shuhe-manage/static/css/chunk-vendors.85e72a0e.css" rel="stylesheet"><link href="/demo/shuhe-manage/static/css/app.2f1eb7e5.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but steven-admin doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"><div class="app-loading"><div class="app-loading-wrap"><div class="app-loading-dots"><span class="dot dot-spin"><i></i><i></i><i></i><i></i></span></div><div class="app-loading-title">steven-admin</div></div></div></div><script src="/demo/shuhe-manage/static/js/chunk-vendors.e6a36a36.js"></script><script src="/demo/shuhe-manage/static/js/app.43bd6279.js"></script></body></html>
